# mcp-run-python

./: README.md  pyproject.toml
mcp_run_python/: _cli.py  main.py
mcp_run_python/deno/src/: main.ts
tests/: test_mcp_servers.py
